# pipeline-riscv

code/: Makefile  a.dump  a.elf  entry.s  linker.ld  pow.c
fpga_project/: stp1.stp  stp1_auto_stripped.stp  system.qpf  system.qsf
fpga_project/db/: altsyncram_0q14.tdf  altsyncram_42h1.tdf  altsyncram_4eq1.tdf  altsyncram_6q14.tdf  altsyncram_8eq1.tdf  altsyncram_eeq1.tdf  altsyncram_eq14.tdf  altsyncram_fq14.tdf  altsyncram_g8h1.tdf  altsyncram_gog1.tdf  altsyncram_meq1.tdf  altsyncram_neq1.tdf  altsyncram_sp14.tdf  altsyncram_uug1.tdf  cntr_1ci.tdf  cntr_32j.tdf  cntr_8ci.tdf  cntr_9ci.tdf  cntr_vbi.tdf  decode_4oa.tdf  decode_jra.tdf  mux_3mb.tdf  mux_coc.tdf  mux_hib.tdf  mux_kib.tdf  prev_cmp_system.qmsg  sld_ela_trigger_tio.tdf  sld_reserved_system_auto_signaltap_0_1_9f37.v  system.(0).cnf.cdb  system.(0).cnf.hdb  system.(1).cnf.cdb  system.(1).cnf.hdb  system.(10).cnf.cdb  system.(10).cnf.hdb  system.(100).cnf.cdb  system.(100).cnf.hdb  system.(101).cnf.cdb  system.(101).cnf.hdb  system.(102).cnf.cdb  system.(102).cnf.hdb  (+400 more)
fpga_project/output_files/: system.asm.rpt  system.cdf  system.done  system.jdi  (+11 more)
gen_rtl/: SinglePortRam.v  YJTop.anno.json  YJTop.fir  YJTop.v  firrtl_black_box_resource_files.f  ihex.sv  wbuart_with_ihex.sv
rtl/: arbiter.sv  dual_port_reg_file.sv  ex.sv  fetch.sv  id.sv  mem.sv  memdev.sv  rr.sv  system.sv  system.sv.bak  system_top.sv  top.sv
testbench/: a.out  fetch-test.vcd  fetch_test.sv  opcode.dict  test.sv  top_test.sv  top_test_view.gtkw
verilator/: CMakeLists.txt  top_verilator.gtkw
verilator/src/: main.cpp  testbench.h
(+20 files in other folders)
